Fixed scrollbar glitch

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body {
   justify-content: space-between;
   min-height: 100vh;
   margin: auto;
+  width: 100vw;
 }
 
 .nav {
